@@ -1,6 +1,6 @@
 ################################################################################
 #    Creme is a free/open-source Customer Relationship Management software
-#    Copyright (C) 2015-2022  Hybird
+#    Copyright (C) 2015-2024  Hybird
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU Affero General Public License as published by
@@ -546,6 +546,12 @@ class CremeCoreConfig(CremeAppConfig):
 
         from . import enumerators, models
 
+        # TODO: improve the registry to write this
+        #       (see 'core.enumerable._EnumerableRegistry._enumerator()') :
+        # enumerable_registry.register_related_model(
+        #     models.CremeEntity,
+        #     enumerators.EntityEnumerator,
+        # )
         enumerable_registry.register_related_model(
             get_user_model(),
             enumerators.UserEnumerator,
